apps/base/arr-lts2/service-qbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbit
  labels: { app: arr-lts2 }
spec:
  type: ClusterIP
  selector: { app: arr-lts2 }
  ports:
    - name: http
      port: 80
      targetPort: 8022
      protocol: TCP
